--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>3.1.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hdrhistogram</groupId>
+            <artifactId>HdrHistogram</artifactId>
+            <version>2.1.7</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Test dependencies-->
         <dependency>
