--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.github.vladimir-bukhtoyarov</groupId>
     <artifactId>rolling-metrics</artifactId>
-    <version>2.0.2</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <name>Rolling metrics</name>
