--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,12 @@
 
     <groupId>com.github.vladimir-bukhtoyarov</groupId>
     <artifactId>rolling-metrics-parent</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <modules>
         <module>rolling-metrics-benchmarks</module>
         <module>rolling-metrics-core</module>
         <module>rolling-metrics-dropwizard</module>
+        <module>rolling-metrics-jmx</module>
     </modules>
 
     <packaging>pom</packaging>
