--- a/rolling-metrics-benchmarks/pom.xml
+++ b/rolling-metrics-benchmarks/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>rolling-metrics-parent</artifactId>
         <groupId>com.github.vladimir-bukhtoyarov</groupId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -31,18 +31,24 @@
 
     <properties>
         <benchmark.jar.name>benchmark</benchmark.jar.name>
+        <benchmark.jmh.version>1.19</benchmark.jmh.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>rolling-metrics-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>1.14</version>
+            <version>${benchmark.jmh.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>1.14</version>
+            <version>${benchmark.jmh.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -56,6 +62,11 @@
             <artifactId>HdrHistogram</artifactId>
             <version>2.1.8</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
         </dependency>
     </dependencies>
     <build>
