#8 abstraction from metrcis core

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
         </repository>
     </distributionManagement>
 
+    <dependencies>
+        <!-- Test dependencies-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <profiles>
         <profile>
             <id>coverall</id>
