#8 decouple rolling-mertics from metrics-core

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.github.vladimir-bukhtoyarov</groupId>
     <artifactId>rolling-metrics-parent</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-RC1</version>
     <modules>
         <module>rolling-metrics-benchmarks</module>
         <module>rolling-metrics-core</module>
