--- a/rolling-metrics-dropwizard/pom.xml
+++ b/rolling-metrics-dropwizard/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>rolling-metrics-parent</artifactId>
         <groupId>com.github.vladimir-bukhtoyarov</groupId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0-RC1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -43,11 +43,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.hdrhistogram</groupId>
+            <artifactId>HdrHistogram</artifactId>
+            <version>2.1.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>3.1.2</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
 
