#8 skip deployment of experimental module

--- a/rolling-metrics-jmx/pom.xml
+++ b/rolling-metrics-jmx/pom.xml
@@ -29,6 +29,10 @@
     <groupId>com.github.vladimir-bukhtoyarov</groupId>
     <artifactId>rolling-metrics-jmx</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.vladimir-bukhtoyarov</groupId>
