--- a/rolling-metrics-benchmarks/pom.xml
+++ b/rolling-metrics-benchmarks/pom.xml
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.hdrhistogram</groupId>
             <artifactId>HdrHistogram</artifactId>
-            <version>2.1.8</version>
+            <version>${hdr.histogram.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
