--- a/rolling-metrics-core/pom.xml
+++ b/rolling-metrics-core/pom.xml
@@ -25,15 +25,14 @@
         <version>3.0.0-RC2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.github.vladimir-bukhtoyarov</groupId>
+    
     <artifactId>rolling-metrics-core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.hdrhistogram</groupId>
             <artifactId>HdrHistogram</artifactId>
-            <version>2.1.8</version>
+            <version>${hdr.histogram.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
