--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hdr.histogram.version>2.1.8</hdr.histogram.version>
+        <metrics-core.version>3.1.2</metrics-core.version>
     </properties>
 
     <repositories>
