--- a/rolling-metrics-dropwizard/pom.xml
+++ b/rolling-metrics-dropwizard/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>3.1.2</version>
+            <version>${metrics-core.version}</version>
             <scope>provided</scope>
         </dependency>
 
