#18 Do not use System.currentTimeMillis() to measure elapsed time

--- a/rolling-metrics-jmx/pom.xml
+++ b/rolling-metrics-jmx/pom.xml
@@ -28,6 +28,11 @@
 
     <artifactId>rolling-metrics-jmx</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <sonar.skip>true</sonar.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.vladimir-bukhtoyarov</groupId>
