--- a/rolling-metrics-core/pom.xml
+++ b/rolling-metrics-core/pom.xml
@@ -35,6 +35,12 @@
             <version>${hdr.histogram.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
