--- a/rolling-metrics-core/pom.xml
+++ b/rolling-metrics-core/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
-            <version>3.4.0</version>
+            <version>${disruptor.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
