--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hdr.histogram.version>2.1.8</hdr.histogram.version>
         <metrics-core.version>3.1.2</metrics-core.version>
+        <disruptor.version>3.4.0</disruptor.version>
     </properties>
 
     <repositories>
