--- a/rolling-metrics-core/pom.xml
+++ b/rolling-metrics-core/pom.xml
@@ -42,6 +42,7 @@
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
