--- a/rolling-metrics-jmx/pom.xml
+++ b/rolling-metrics-jmx/pom.xml
@@ -30,6 +30,7 @@
     <artifactId>rolling-metrics-jmx</artifactId>
 
     <properties>
+        <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
         <maven.deploy.skip>true</maven.deploy.skip>
         <sonar.skip>true</sonar.skip>
     </properties>
