--- a/rolling-metrics-parent/pom.xml
+++ b/rolling-metrics-parent/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.github.vladimir-bukhtoyarov</groupId>
     <artifactId>rolling-metrics-parent</artifactId>
-    <version>3.0.0-RC6</version>
+    <version>3.0.0-RC7</version>
 
     <packaging>pom</packaging>
     <name>Rolling metrics parent</name>
@@ -111,7 +111,7 @@
             </build>
         </profile>
         <profile>
-            <id>bintray</id>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
