move gc-monitor to rolling-metrics-core

--- a/rolling-metrics-jmx/pom.xml
+++ b/rolling-metrics-jmx/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>rolling-metrics-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>rolling-metrics-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
