--- a/rolling-metrics-benchmarks/pom.xml
+++ b/rolling-metrics-benchmarks/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>rolling-metrics-parent</artifactId>
         <groupId>com.github.vladimir-bukhtoyarov</groupId>
-        <version>3.0.0-RC7</version>
+        <version>3.0.0</version>
         <relativePath>../rolling-metrics-parent</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
